# gewebehaken

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  gewebehaken.py  pyproject.toml  requirements-release.txt  requirements.txt  run_gewebehaken.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
gewebehaken/: app.py  cli.py  util.py
gewebehaken/hooks/: gitlab.py  twitter.py
src/gewebehaken/: app.py  cli.py  util.py
src/gewebehaken/hooks/: gitlab.py  twitter.py
tests/: base.py  conftest.py
tests/hooks/: test_gitlab.py  test_twitter.py
