[metadata]
name = Gewebehaken
version = attr: gewebehaken.VERSION
url = https://github.com/homeworkprod/gewebehaken
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
license = MIT
license_file = LICENSE
description = Webhooks.
keywords = webhook
platforms = any

[options]
zip_safe = False
install_requires =
    blinker==1.4
    Flask==1.1.2
    Werkzeug==1.0.1
python_requires = >=3.7
packages = find:
package_dir = =src

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
python_version = 3.7
