[metadata]
name = Gewebehaken
version = attr: gewebehaken.VERSION
url = https://github.com/homeworkprod/gewebehaken
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
license = MIT
license_files = LICENSE
description = Webhooks.
keywords = webhook
platforms = any

[options]
zip_safe = False
install_requires =
    blinker==1.5
    Flask==2.2.2
    Werkzeug==2.2.2
python_requires = >=3.7
packages = find:
package_dir = =src

[options.entry_points]
console_scripts =
    gewebehaken = gewebehaken.cli:main

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
python_version = 3.7
