[metadata]
name = Gewebehaken
version = attr: gewebehaken.VERSION
description = A framework to provide HTTP endpoints for incoming webhooks
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
url = https://github.com/homeworkprod/gewebehaken
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
license = MIT
license_files = LICENSE
keywords = webhook
platforms = any

[options]
zip_safe = False
install_requires =
    blinker==1.8.2
    Flask==3.0.3
    Werkzeug==3.0.3
python_requires = >=3.9
packages = find:
package_dir = =src

[options.entry_points]
console_scripts =
    gewebehaken = gewebehaken.cli:main

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
python_version = 3.9
